{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 28,
  "lineage": "9ac51eba-f58d-7143-fa6c-4da2ed1c68af",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "docker_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03567937840f41a6f",
            "arn": "arn:aws:ec2:us-east-1:327816341344:elastic-ip/eipalloc-03567937840f41a6f",
            "association_id": "eipassoc-089936abe6e5932cb",
            "domain": "vpc",
            "id": "eipalloc-03567937840f41a6f",
            "instance": "i-0e8b081c81735a024",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ac1f12641b8dbee6",
            "private_dns": "ip-10-0-1-55.ec2.internal",
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-35-169-193-172.compute-1.amazonaws.com",
            "public_ip": "35.169.193.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cicd-docker-eip"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-docker-eip",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ec2.aws_instance.docker",
            "module.keypair.aws_key_pair.cicd_keypair",
            "module.security_groups.aws_security_group.docker_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8b87e4753da26c0",
            "arn": "arn:aws:ec2:us-east-1:327816341344:elastic-ip/eipalloc-0a8b87e4753da26c0",
            "association_id": "eipassoc-04d4cda0653fbe681",
            "domain": "vpc",
            "id": "eipalloc-0a8b87e4753da26c0",
            "instance": "i-03bb3128a70304fb2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04c1607fa5f3b7ee5",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-98-95-91-157.compute-1.amazonaws.com",
            "public_ip": "98.95.91.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cicd-jenkins-eip"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-jenkins-eip",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ec2.aws_instance.jenkins",
            "module.keypair.aws_key_pair.cicd_keypair",
            "module.security_groups.aws_security_group.jenkins_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "sonarqube_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d689c2dbe3c5043b",
            "arn": "arn:aws:ec2:us-east-1:327816341344:elastic-ip/eipalloc-0d689c2dbe3c5043b",
            "association_id": "eipassoc-09a8744ab2cbde22b",
            "domain": "vpc",
            "id": "eipalloc-0d689c2dbe3c5043b",
            "instance": "i-0978580715b048379",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e6f1eb2b48fb08ee",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-23-21-122-13.compute-1.amazonaws.com",
            "public_ip": "23.21.122.13",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cicd-sonarqube-eip"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-sonarqube-eip",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.ec2.aws_instance.sonarqube",
            "module.keypair.aws_key_pair.cicd_keypair",
            "module.security_groups.aws_security_group.sonarqube_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:327816341344:instance/i-0e8b081c81735a024",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8b081c81735a024",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cicd-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ac1f12641b8dbee6",
            "private_dns": "ip-10-0-1-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "public_dns": "ec2-100-29-189-190.compute-1.amazonaws.com",
            "public_ip": "100.29.189.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "tags": {
                  "Name": "cicd-docker-root"
                },
                "tags_all": {
                  "Environment": "production",
                  "ManagedBy": "Terraform",
                  "Name": "cicd-docker-root",
                  "Owner": "DevOps-Team",
                  "Project": "CICD-Infrastructure"
                },
                "throughput": 0,
                "volume_id": "vol-0f08a8edf40f5d745",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f4f3561f5a45415",
            "tags": {
              "Environment": "production",
              "Name": "cicd-docker-builder",
              "Service": "Docker"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-docker-builder",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure",
              "Service": "Docker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0984dc08a69913d6e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.keypair.aws_key_pair.cicd_keypair",
            "module.security_groups.aws_security_group.docker_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:327816341344:instance/i-03bb3128a70304fb2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03bb3128a70304fb2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cicd-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c1607fa5f3b7ee5",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-44-203-221-236.compute-1.amazonaws.com",
            "public_ip": "44.203.221.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "tags": {
                  "Name": "cicd-jenkins-root"
                },
                "tags_all": {
                  "Environment": "production",
                  "ManagedBy": "Terraform",
                  "Name": "cicd-jenkins-root",
                  "Owner": "DevOps-Team",
                  "Project": "CICD-Infrastructure"
                },
                "throughput": 0,
                "volume_id": "vol-027145b84197813d0",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f4f3561f5a45415",
            "tags": {
              "Environment": "production",
              "Name": "cicd-jenkins-master",
              "Service": "Jenkins"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-jenkins-master",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure",
              "Service": "Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02cfa8b9d89688ed3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.keypair.aws_key_pair.cicd_keypair",
            "module.security_groups.aws_security_group.jenkins_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb0b230890ccd1e6",
            "arn": "arn:aws:ec2:us-east-1:327816341344:instance/i-0978580715b048379",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0978580715b048379",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cicd-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e6f1eb2b48fb08ee",
            "private_dns": "ip-10-0-1-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.182",
            "public_dns": "ec2-13-223-247-74.compute-1.amazonaws.com",
            "public_ip": "13.223.247.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 120,
                "tags": {
                  "Name": "cicd-sonarqube-root"
                },
                "tags_all": {
                  "Environment": "production",
                  "ManagedBy": "Terraform",
                  "Name": "cicd-sonarqube-root",
                  "Owner": "DevOps-Team",
                  "Project": "CICD-Infrastructure"
                },
                "throughput": 0,
                "volume_id": "vol-08fed9fe6c8f2f419",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f4f3561f5a45415",
            "tags": {
              "Environment": "production",
              "Name": "cicd-sonarqube-server",
              "Service": "SonarQube"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-sonarqube-server",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure",
              "Service": "SonarQube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb7396d2f1557907"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.keypair.aws_key_pair.cicd_keypair",
            "module.security_groups.aws_security_group.sonarqube_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327816341344:security-group/sg-0984dc08a69913d6e",
            "description": "Security group for Docker builder",
            "egress": [],
            "id": "sg-0984dc08a69913d6e",
            "ingress": [],
            "name": "cicd-docker-20251106120508707600000003",
            "name_prefix": "cicd-docker-",
            "owner_id": "327816341344",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-docker-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-docker-sg",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e009432307d8bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.cicd_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327816341344:security-group/sg-02cfa8b9d89688ed3",
            "description": "Security group for Jenkins server",
            "egress": [],
            "id": "sg-02cfa8b9d89688ed3",
            "ingress": [],
            "name": "cicd-jenkins-20251106120508705100000002",
            "name_prefix": "cicd-jenkins-",
            "owner_id": "327816341344",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-jenkins-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-jenkins-sg",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e009432307d8bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.cicd_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonarqube_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327816341344:security-group/sg-0fb7396d2f1557907",
            "description": "Security group for SonarQube server",
            "egress": [],
            "id": "sg-0fb7396d2f1557907",
            "ingress": [],
            "name": "cicd-sonarqube-20251106120508705000000001",
            "name_prefix": "cicd-sonarqube-",
            "owner_id": "327816341344",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-sonarqube-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-sonarqube-sg",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e009432307d8bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.cicd_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "docker_daemon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Docker daemon API",
            "from_port": 2375,
            "id": "sgrule-4178690837",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0984dc08a69913d6e",
            "security_group_rule_id": "sgr-052173ee6c272ef19",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2375,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.docker_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "docker_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-2400372658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0984dc08a69913d6e",
            "security_group_rule_id": "sgr-06a066f74f7ef9670",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.docker_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "docker_registry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Docker registry",
            "from_port": 5000,
            "id": "sgrule-1065411799",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0984dc08a69913d6e",
            "security_group_rule_id": "sgr-0ca1f5cdc3a3f088d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.docker_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "docker_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH access from VPC (Jenkins)",
            "from_port": 22,
            "id": "sgrule-4172162958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0984dc08a69913d6e",
            "security_group_rule_id": "sgr-0318afc88d45900e4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.docker_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Jenkins agent communication",
            "from_port": 50000,
            "id": "sgrule-3709926758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02cfa8b9d89688ed3",
            "security_group_rule_id": "sgr-079c04422c46565c7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 50000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.jenkins_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-3353757714",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02cfa8b9d89688ed3",
            "security_group_rule_id": "sgr-03f9f1eae9a2001e1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.jenkins_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH access from allowed CIDR",
            "from_port": 22,
            "id": "sgrule-2669402258",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02cfa8b9d89688ed3",
            "security_group_rule_id": "sgr-08b42d051dfb8eaf3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.jenkins_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jenkins_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Jenkins web UI",
            "from_port": 8080,
            "id": "sgrule-634257743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02cfa8b9d89688ed3",
            "security_group_rule_id": "sgr-068541b78a34840cb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.jenkins_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sonarqube_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-1327007507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0fb7396d2f1557907",
            "security_group_rule_id": "sgr-0012b7189ad32d8a4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.sonarqube_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sonarqube_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "PostgreSQL database",
            "from_port": 5432,
            "id": "sgrule-3046690600",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fb7396d2f1557907",
            "security_group_rule_id": "sgr-06c34d1b45b6b9613",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.sonarqube_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sonarqube_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH access from allowed CIDR",
            "from_port": 22,
            "id": "sgrule-3354047572",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fb7396d2f1557907",
            "security_group_rule_id": "sgr-081c82b3afcca290e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.sonarqube_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sonarqube_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SonarQube web UI from Jenkins",
            "from_port": 9000,
            "id": "sgrule-2387848059",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fb7396d2f1557907",
            "security_group_rule_id": "sgr-077e9cac9d7939415",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.sonarqube_sg",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cicd_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327816341344:internet-gateway/igw-03772337852ca9e5c",
            "id": "igw-03772337852ca9e5c",
            "owner_id": "327816341344",
            "tags": {
              "Environment": "production",
              "Name": "cicd-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-igw",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure"
            },
            "vpc_id": "vpc-04e009432307d8bda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327816341344:route-table/rtb-0e4623d172153cac8",
            "id": "rtb-0e4623d172153cac8",
            "owner_id": "327816341344",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03772337852ca9e5c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "cicd-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-public-rt",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e009432307d8bda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.cicd_igw",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09694ce0256275005",
            "route_table_id": "rtb-0e4623d172153cac8",
            "subnet_id": "subnet-09f4f3561f5a45415"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.cicd_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327816341344:subnet/subnet-09f4f3561f5a45415",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f4f3561f5a45415",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "327816341344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "cicd-public-subnet",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-public-subnet",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure",
              "Type": "Public"
            },
            "vpc_id": "vpc-04e009432307d8bda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.cicd_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cicd_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:327816341344:vpc/vpc-04e009432307d8bda",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0225149d1b9d06c2f",
            "default_route_table_id": "rtb-047df5735b624ab38",
            "default_security_group_id": "sg-00540d6919fd2467a",
            "dhcp_options_id": "dopt-0555030fbe44200ea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04e009432307d8bda",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047df5735b624ab38",
            "owner_id": "327816341344",
            "tags": {
              "Environment": "production",
              "Name": "cicd-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "cicd-vpc",
              "Owner": "DevOps-Team",
              "Project": "CICD-Infrastructure"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}